force-app/main/default/objects/Engagement_Settings__c/Engagement_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description
  >Org-wide configuration for the Engagement Attribution feature (active window, confidence threshold, signal decay).</description>
    <label>Engagement Settings</label>
</CustomObject>