force-app/main/default/objects/Engagement_Settings__c/fields/Active_Window_Days__c.field-meta.xml
<CustomField>
    <fullName>Active_Window_Days__c</fullName>
    <defaultValue>180</defaultValue>
    <label>Active Window Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>