force-app/main/default/objects/Engagement_Settings__c/fields/Confidence_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Threshold__c</fullName>
    <defaultValue>40</defaultValue>
    <label>Confidence Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>