force-app/main/default/objects/Engagement_Settings__c/fields/Signal_Decay_Days__c.field-meta.xml
<CustomField>
    <fullName>Signal_Decay_Days__c</fullName>
    <defaultValue>90</defaultValue>
    <label>Signal Decay Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>